--- a/portfolio.html
+++ b/portfolio.html
@@ -106,12 +106,13 @@
       border-radius: 50%;
       border: 5px solid rgba(255, 255, 255, 0.2);
       margin: 0 auto 20px;
-      background-color: #ddd;
+      background: linear-gradient(135deg, var(--secondary) 0%, var(--accent) 100%);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 4rem;
-      color: var(--primary);
+      font-size: 3rem;
+      color: white;
+      font-weight: bold;
     }
 
     header h1 {
@@ -241,14 +242,16 @@
     }
 
     .about-image {
-      background-color: #ddd;
+      background: linear-gradient(135deg, var(--light) 0%, #e0e0e0 100%);
       height: 300px;
       border-radius: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.5rem;
-      color: #777;
+      font-size: 1.2rem;
+      color: var(--primary);
+      text-align: center;
+      padding: 20px;
     }
 
     /* --- Skills Section --- */
@@ -422,12 +425,12 @@
 
     .project-image {
       height: 180px;
-      background-color: #ddd;
+      background: linear-gradient(135deg, var(--secondary) 0%, var(--primary) 100%);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.2rem;
-      color: #777;
+      color: white;
+      font-size: 3rem;
     }
 
     .project-content {
@@ -595,7 +598,7 @@
         </div>
         <div class="contact-item">
           <span>🔗</span>
-          <a href="https://www.linkedin.com/in/nikhil-sajan-3264652a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
+          <a href="#" target="_blank">LinkedIn</a>
         </div>
       </div>
     </div>
@@ -639,7 +642,7 @@
             <p>I enjoy the process of transforming ideas into functional digital products and continuously learning new technologies to enhance my skills. With a solid foundation in programming and web technologies, I'm excited to contribute to innovative projects and grow as a developer.</p>
           </div>
           <div class="about-image">
-            Profile Image Placeholder
+            Focused on creating clean, efficient, and user-friendly web solutions
           </div>
         </div>
       </div>
@@ -748,14 +751,14 @@
         </div>
         <div class="projects-grid">
           <div class="project-card">
-            <div class="project-image">Project Image</div>
+            <div class="project-image">💡</div>
             <div class="project-content">
               <h3>Interior Room Design Using AI</h3>
               <p>An AI-powered application that helps users visualize and design interior spaces. The system uses machine learning algorithms to suggest optimal furniture placement, color schemes, and decor based on room dimensions and user preferences.</p>
             </div>
           </div>
           <div class="project-card">
-            <div class="project-image">Project Image</div>
+            <div class="project-image">🏥</div>
             <div class="project-content">
               <h3>Doctors Collaboration App</h3>
               <p>A comprehensive platform that enables healthcare professionals to collaborate on patient cases, share medical insights, and coordinate treatment plans. Features include secure messaging, file sharing, and virtual consultation capabilities.</p>
